# tutogit-mst

./: CMakeLists.txt  main.c
DataTypes/: DoublyLinkedList.c  DoublyLinkedList.h
IHMHugeNumber/: ScanHugeNumber.c  ScanHugeNumber.h  ShowHugeNumber.c  ShowHugeNumber.h
UseHugeNumber/Operator/: HugeFloatOperator.c  HugeFloatOperator.h  HugeIntOperator.c  HugeIntOperator.h  HugeUnsignedIntOperator.c  HugeUnsignedIntOperator.h
UseHugeNumber/Type/: HugeFloat.c  HugeFloat.h  HugeInt.c  HugeInt.h  HugeUnsignedInt.c  HugeUnsignedInt.h
